boot-start, boot-jsp > 복습

--- a/boot-jsp/src/main/resources/application.properties
+++ b/boot-jsp/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # 서버 포트 번호
 server.port = 8092
+server.servlet.context-path=/simplify
 
 # JSP View Resoler, webapp, WEB-INF 폴더가 없음 
 spring.mvc.view.prefix=/WEB-INF/views/
